--- a/NextMQTT.xcodeproj/xcshareddata/xcschemes/NextMQTT-Package.xcscheme
+++ b/NextMQTT.xcodeproj/xcshareddata/xcschemes/NextMQTT-Package.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1120"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9F496A60235FC50C0054F473"
+               BlueprintIdentifier = "NextMQTT::NextMQTT"
                BuildableName = "NextMQTT.framework"
-               BlueprintName = "NextMQTT watchOS"
+               BlueprintName = "NextMQTT"
                ReferencedContainer = "container:NextMQTT.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "NextMQTT::NextMQTTTests"
+               BuildableName = "NextMQTTTests.xctest"
+               BlueprintName = "NextMQTTTests"
+               ReferencedContainer = "container:NextMQTT.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -47,15 +57,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9F496A60235FC50C0054F473"
-            BuildableName = "NextMQTT.framework"
-            BlueprintName = "NextMQTT watchOS"
-            ReferencedContainer = "container:NextMQTT.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
